--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsx",
-    "test": "vitest"
+    "test": "vitest",
+    "backfill": "promtool tsdb create-blocks-from openmetrics \"$1\" --max-block-duration 24h"
   },
   "author": "",
   "license": "ISC",
