--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -1,12 +1,14 @@
 services:
-  mimir:
-    image: grafana/mimir:2.15.0
-    container_name: mimir
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    user: root
     volumes:
-      - ./data-compactor:/data-compactor
-      - ./data:/data
-      - ./mimir.yaml:/etc/mimir/mimir-config.yml
-    command: ["-config.file=/etc/mimir/mimir-config.yml"]
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./blocks:/prometheus/data
+      - ./input:/prometheus/input
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.retention.time=400d"
     ports:
-      - "9009:9009"
-      - "8080:8080"
+      - "0.0.0.0:9090:9090"
